# nonebot-plugin-mahjong-utils

./: .gitignore  .pre-commit-config.yaml  README.MD  bot.py  pyproject.toml
.github/workflows/: pr-check.yml  python-build.yml  python-publish.yml  release.yml
src/nonebot_plugin_mahjong_utils/: __init__.py  ac.py  config.py  handle_error.py  mapper.py  parser.py  tiles_sniffer.py
src/nonebot_plugin_mahjong_utils/interceptors/: handle_error.py
src/nonebot_plugin_mahjong_utils/mapper/: __init__.py  hand.py  hora.py  point_by_han_hu.py  sent_store.py  shanten.py
src/nonebot_plugin_mahjong_utils/mapper/htmlrender/: __init__.py
src/nonebot_plugin_mahjong_utils/mapper/htmlrender/templates/: hora.html  macro.html  shanten_with_furo_chance.html  shanten_with_got.html  shanten_without_got.html  style.css
src/nonebot_plugin_mahjong_utils/mapper/plaintext/: general.py  hand.py  hora.py  point_by_han_hu.py  shanten.py
src/nonebot_plugin_mahjong_utils/matchers/: __init__.py  furo_judge_sniffer.py  furo_pairi.py  han_hu.py  pairi.py  tiles_analyse.py  tiles_img_analyse.py  tiles_sniffer.py
src/nonebot_plugin_mahjong_utils/render/: __init__.py
src/nonebot_plugin_mahjong_utils/render/templates/: hora.html  shanten_with_furo_chance.html  style.css
src/nonebot_plugin_mahjong_utils/utils/: executor.py  mapper.py  parser.py
src/tests/: __init__.py  conftest.py  test.py  test_img.py  test_mapper.py  test_text.py  utils.py
src/tests/expect_html/: hora_11123456789999s.html  shanten_234567s12334p.html  shanten_234567s1234p.html
