[tool.poetry]
name = "nonebot-plugin-mahjong-utils"
version = "0.4.7"
description = ""
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]
readme = "README.MD"
license = "MIT"
repository = "https://github.com/ssttkkl/nonebot-plugin-mahjong-utils"
packages = [
    { include = "nonebot_plugin_mahjong_utils", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0"
mahjong-utils = "^0.7.4"
nonebot-plugin-htmlrender = "^0.2.0.3"
nonebot-plugin-send-anything-anywhere = ">=0.3.0"
ssttkkl-nonebot-utils = "^0.1.22"

[tool.poetry.group.dev.dependencies]
nonebot2 = {extras = ["httpx", "websockets"], version = "^2.0.1"}
pytest = "^8.3.3"
nonebug = "^0.3.7"
pytest-asyncio = "^0.24.0"
nonebot-adapter-onebot = "^2.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
