[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/nonebot_plugin_mahjong_utils"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "nonebot-plugin-mahjong-utils"
version = "0.4.7"
description = ""
authors = [
    {name = "ssttkkl", email = "huang.wen.long@hotmail.com"},
]
dependencies = [
    "nonebot2<3.0.0,>=2.0.0",
    "mahjong-utils<1.0.0,>=0.7.4",
    "nonebot-plugin-htmlrender<1.0.0.0,>=0.2.0.3",
    "nonebot-plugin-send-anything-anywhere>=0.3.0",
    "ssttkkl-nonebot-utils<1.0.0,>=0.1.22",
]
requires-python = "<4.0,>=3.9"
readme = {file = "README.MD", content-type = "text/markdown"}
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/ssttkkl/nonebot-plugin-mahjong-utils"

[dependency-groups]
dev = [
    "nonebot2[httpx,websockets]<3.0.0,>=2.0.1",
    "pytest<9.0.0,>=8.3.3",
    "nonebug<1.0.0,>=0.3.7",
    "pytest-asyncio<1.0.0,>=0.24.0",
    "nonebot-adapter-onebot<3.0.0,>=2.4.5",
]
